--- a/bibliography.bib
+++ b/bibliography.bib
@@ -25,6 +25,18 @@
 	urldate = {2017-06-20}
 }
 
+@book{Conway,
+	author = {John B.~Conway},
+	title = {A Course in Functional Analysis},
+	date = {1990},
+	edition = {2},
+	series = {Graduate Texts in Mathematics},
+	number = {96},
+	publisher = {Springer},
+	isbn = {0-387-97245-5}
+}
+
+
 @book{Dummit,
 	author = {David S.~Dummit and Richard M.~Foote},
 	title = {Abstract Algebra},
