--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,6 @@
 
 \title{Linear Algebra}
 \author{Jonathan Gleason}
-\date{\today}
 
 \begin{document}
 
@@ -41,6 +40,8 @@ Trigger warning:  Row-reduction contained herein.
 \include{tensor}
 
 \include{ips}
+
+\include{Applications}
 
 \appendix % Cannot go in apd.
 \part*{Appendices} % Will throw errors when used in combination with \includeonly
